Se organizan sombras de menus

--- a/index.html
+++ b/index.html
@@ -188,26 +188,36 @@
             </div>
         </div>
         <div class="menu-apps">
-            <a href="" class="menu-apps-item">
-                <i class="icon-menu-apps icon-youtube"></i>
-                <p>YouTube TV</p>
-            </a>
-            <a href="" class="menu-apps-item">
-                <i class="icon-menu-apps icon-youtube"></i>
-                <p>YouTube Music</p>
-            </a>
-            <a href="" class="menu-apps-item">
-                <i class="icon-menu-apps icon-youtube"></i>
-                <p>YouTube Kids</p>
-            </a>
-            <a href="" class="menu-apps-item">
-                <i class="icon-menu-apps icon-youtube"></i>
-                <p>Academia de Creadores</p>
-            </a>
-            <a href="" class="menu-apps-item">
-                <i class="icon-menu-apps icon-youtube"></i>
-                <p>YouTube para Artistas</p>
-            </a>
+            <div class="menu-apps-item-container">
+                <a href="" class="menu-apps-item">
+                    <i class="icon-menu-apps icon-youtube"></i>
+                    <p>YouTube TV</p>
+                </a>
+            </div>
+            <div class="menu-apps-item-container">
+                <a href="" class="menu-apps-item">
+                    <i class="icon-menu-apps icon-youtube"></i>
+                    <p>YouTube Music</p>
+                </a>
+            </div>
+            <div class="menu-apps-item-container">
+                <a href="" class="menu-apps-item">
+                    <i class="icon-menu-apps icon-youtube"></i>
+                    <p>YouTube Kids</p>
+                </a>
+            </div>
+            <div class="menu-apps-item-container">
+                <a href="" class="menu-apps-item">
+                    <i class="icon-menu-apps icon-youtube"></i>
+                    <p>Academia de Creadores</p>
+                </a>
+            </div>
+            <div class="menu-apps-item-container">
+                <a href="" class="menu-apps-item">
+                    <i class="icon-menu-apps icon-youtube"></i>
+                    <p>YouTube para Artistas</p>
+                </a>
+            </div>
         </div>
         <div class="menu-notifications">
             <div class="bar-notification">
@@ -538,54 +548,54 @@
                         <img src="images/content-image.jpg" alt="" class="image-content">
                         <div class="play-max">
                             <p>50+</p>
-                            <i class="icon-stack"></i>
-                            <div class="reproduction">
-                                <i class="play-mix"></i>
-                                <p>Reproducir todos</p>
-                            </div>
+                            <i class="icon-feed"></i>
+                        </div>
+                        <div class="reproduction">
+                            <i class="play-mix icon-youtube-play"></i>
+                            <p>Reproducir todos</p>
                         </div>
                     </div>
-                    <div class="description-content">
+                    <div class="description-content-mix">
                         <h1 class="tittle-content">Título de canción</h1>
                         <h2 class="name-account-content">Autores</h2>
+                        <i class="more-options-mix icon-more-vertical"></i>
                     </div>
-                    <i class="more-options-mix icon-more-vertical"></i>
                 </div>
                 <div class="container-content">
                     <div class="container-image-content">
                         <img src="images/content-image.jpg" alt="" class="image-content">
                         <div class="play-max">
                             <p>50+</p>
-                            <i class="icon-stack"></i>
-                            <div class="reproduction">
-                                <i class="play-mix"></i>
-                                <p>Reproducir todos</p>
-                            </div>
+                            <i class="icon-feed"></i>
+                        </div>
+                        <div class="reproduction">
+                            <i class="play-mix icon-youtube-play"></i>
+                            <p>Reproducir todos</p>
                         </div>
                     </div>
-                    <div class="description-content">
+                    <div class="description-content-mix">
                         <h1 class="tittle-content">Título de canción</h1>
                         <h2 class="name-account-content">Autores</h2>
+                        <i class="more-options-mix icon-more-vertical"></i>
                     </div>
-                    <i class="more-options-mix icon-more-vertical"></i>
                 </div>
                 <div class="container-content">
                     <div class="container-image-content">
                         <img src="images/content-image.jpg" alt="" class="image-content">
                         <div class="play-max">
                             <p>50+</p>
-                            <i class="icon-stack"></i>
-                            <div class="reproduction">
-                                <i class="play-mix"></i>
-                                <p>Reproducir todos</p>
-                            </div>
+                            <i class="icon-feed"></i>
+                        </div>
+                        <div class="reproduction">
+                            <i class="play-mix icon-youtube-play"></i>
+                            <p>Reproducir todos</p>
                         </div>
                     </div>
-                    <div class="description-content">
+                    <div class="description-content-mix">
                         <h1 class="tittle-content">Título de canción</h1>
                         <h2 class="name-account-content">Autores</h2>
+                        <i class="more-options-mix icon-more-vertical"></i>
                     </div>
-                    <i class="more-options-mix icon-more-vertical"></i>
                 </div>
             </div>    
         </div>
