--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="style.css">
         <!-- <link rel="stylesheet" href="media.css"> -->
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;500;900&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
         </style>
             
     </head>
