--- a/index.html
+++ b/index.html
@@ -542,6 +542,214 @@
                             <i class="more-options-content icon-more-vertical"></i>
                         </div>
                     </div>
+                    <div class="container-content">
+                        <div class="container-image-content">
+                            <img src="images/content-image.jpg" alt="" class="image-content">
+                            <p class="duration">1:01:14</p>
+                            <div class="ver-mas-tarde">
+                                <p class="ver-mas-tarde-text">ver más tarde</p>
+                                <div class="icon-ver-mas-tarde-container">
+                                    <i class="icon-ver-mas-tarde icon-clock2"></i>
+                                </div>
+                            </div>
+                            <div class="agregar-lista">
+                                <p class="agregar-lista-text">agregar a la lista</p>
+                                <div class="icon-agregar-lista-container">
+                                    <i class="icon-agregar-lista icon-playlist_play"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="description-content">
+                            <img src="images/image-profile.png" alt="" class="image-profile">
+                            <h1 class="tittle-content">Título de canción</h1>
+                            <h2 class="name-account-content">Autor</h2>
+                            <h2 class="views-content">20 M de vistas</h2>
+                            <h2 class="time-content">hace 11 meses</h2>
+                            <i class="more-options-content icon-more-vertical"></i>
+                        </div>
+                    </div>
+                    <div class="container-content">
+                        <div class="container-image-content">
+                            <img src="images/content-image.jpg" alt="" class="image-content">
+                            <p class="duration">1:01:14</p>
+                            <div class="ver-mas-tarde">
+                                <p class="ver-mas-tarde-text">ver más tarde</p>
+                                <div class="icon-ver-mas-tarde-container">
+                                    <i class="icon-ver-mas-tarde icon-clock2"></i>
+                                </div>
+                            </div>
+                            <div class="agregar-lista">
+                                <p class="agregar-lista-text">agregar a la lista</p>
+                                <div class="icon-agregar-lista-container">
+                                    <i class="icon-agregar-lista icon-playlist_play"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="description-content">
+                            <img src="images/image-profile.png" alt="" class="image-profile">
+                            <h1 class="tittle-content">Título de canción</h1>
+                            <h2 class="name-account-content">Autor</h2>
+                            <h2 class="views-content">20 M de vistas</h2>
+                            <h2 class="time-content">hace 11 meses</h2>
+                            <i class="more-options-content icon-more-vertical"></i>
+                        </div>
+                    </div>
+                    <div class="container-content">
+                        <div class="container-image-content">
+                            <img src="images/content-image.jpg" alt="" class="image-content">
+                            <p class="duration">1:01:14</p>
+                            <div class="ver-mas-tarde">
+                                <p class="ver-mas-tarde-text">ver más tarde</p>
+                                <div class="icon-ver-mas-tarde-container">
+                                    <i class="icon-ver-mas-tarde icon-clock2"></i>
+                                </div>
+                            </div>
+                            <div class="agregar-lista">
+                                <p class="agregar-lista-text">agregar a la lista</p>
+                                <div class="icon-agregar-lista-container">
+                                    <i class="icon-agregar-lista icon-playlist_play"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="description-content">
+                            <img src="images/image-profile.png" alt="" class="image-profile">
+                            <h1 class="tittle-content">Título de canción</h1>
+                            <h2 class="name-account-content">Autor</h2>
+                            <h2 class="views-content">20 M de vistas</h2>
+                            <h2 class="time-content">hace 11 meses</h2>
+                            <i class="more-options-content icon-more-vertical"></i>
+                        </div>
+                    </div>
+                    <div class="container-content">
+                        <div class="container-image-content">
+                            <img src="images/content-image.jpg" alt="" class="image-content">
+                            <p class="duration">1:01:14</p>
+                            <div class="ver-mas-tarde">
+                                <p class="ver-mas-tarde-text">ver más tarde</p>
+                                <div class="icon-ver-mas-tarde-container">
+                                    <i class="icon-ver-mas-tarde icon-clock2"></i>
+                                </div>
+                            </div>
+                            <div class="agregar-lista">
+                                <p class="agregar-lista-text">agregar a la lista</p>
+                                <div class="icon-agregar-lista-container">
+                                    <i class="icon-agregar-lista icon-playlist_play"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="description-content">
+                            <img src="images/image-profile.png" alt="" class="image-profile">
+                            <h1 class="tittle-content">Título de canción</h1>
+                            <h2 class="name-account-content">Autor</h2>
+                            <h2 class="views-content">20 M de vistas</h2>
+                            <h2 class="time-content">hace 11 meses</h2>
+                            <i class="more-options-content icon-more-vertical"></i>
+                        </div>
+                    </div>
+                    <div class="container-content">
+                        <div class="container-image-content">
+                            <img src="images/content-image.jpg" alt="" class="image-content">
+                            <p class="duration">1:01:14</p>
+                            <div class="ver-mas-tarde">
+                                <p class="ver-mas-tarde-text">ver más tarde</p>
+                                <div class="icon-ver-mas-tarde-container">
+                                    <i class="icon-ver-mas-tarde icon-clock2"></i>
+                                </div>
+                            </div>
+                            <div class="agregar-lista">
+                                <p class="agregar-lista-text">agregar a la lista</p>
+                                <div class="icon-agregar-lista-container">
+                                    <i class="icon-agregar-lista icon-playlist_play"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="description-content">
+                            <img src="images/image-profile.png" alt="" class="image-profile">
+                            <h1 class="tittle-content">Título de canción</h1>
+                            <h2 class="name-account-content">Autor</h2>
+                            <h2 class="views-content">20 M de vistas</h2>
+                            <h2 class="time-content">hace 11 meses</h2>
+                            <i class="more-options-content icon-more-vertical"></i>
+                        </div>
+                    </div>
+                    <div class="container-content">
+                        <div class="container-image-content">
+                            <img src="images/content-image.jpg" alt="" class="image-content">
+                            <p class="duration">1:01:14</p>
+                            <div class="ver-mas-tarde">
+                                <p class="ver-mas-tarde-text">ver más tarde</p>
+                                <div class="icon-ver-mas-tarde-container">
+                                    <i class="icon-ver-mas-tarde icon-clock2"></i>
+                                </div>
+                            </div>
+                            <div class="agregar-lista">
+                                <p class="agregar-lista-text">agregar a la lista</p>
+                                <div class="icon-agregar-lista-container">
+                                    <i class="icon-agregar-lista icon-playlist_play"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="description-content">
+                            <img src="images/image-profile.png" alt="" class="image-profile">
+                            <h1 class="tittle-content">Título de canción</h1>
+                            <h2 class="name-account-content">Autor</h2>
+                            <h2 class="views-content">20 M de vistas</h2>
+                            <h2 class="time-content">hace 11 meses</h2>
+                            <i class="more-options-content icon-more-vertical"></i>
+                        </div>
+                    </div>
+                    <div class="container-content">
+                        <div class="container-image-content">
+                            <img src="images/content-image.jpg" alt="" class="image-content">
+                            <p class="duration">1:01:14</p>
+                            <div class="ver-mas-tarde">
+                                <p class="ver-mas-tarde-text">ver más tarde</p>
+                                <div class="icon-ver-mas-tarde-container">
+                                    <i class="icon-ver-mas-tarde icon-clock2"></i>
+                                </div>
+                            </div>
+                            <div class="agregar-lista">
+                                <p class="agregar-lista-text">agregar a la lista</p>
+                                <div class="icon-agregar-lista-container">
+                                    <i class="icon-agregar-lista icon-playlist_play"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="description-content">
+                            <img src="images/image-profile.png" alt="" class="image-profile">
+                            <h1 class="tittle-content">Título de canción</h1>
+                            <h2 class="name-account-content">Autor</h2>
+                            <h2 class="views-content">20 M de vistas</h2>
+                            <h2 class="time-content">hace 11 meses</h2>
+                            <i class="more-options-content icon-more-vertical"></i>
+                        </div>
+                    </div>
+                    <div class="container-content">
+                        <div class="container-image-content">
+                            <img src="images/content-image.jpg" alt="" class="image-content">
+                            <p class="duration">1:01:14</p>
+                            <div class="ver-mas-tarde">
+                                <p class="ver-mas-tarde-text">ver más tarde</p>
+                                <div class="icon-ver-mas-tarde-container">
+                                    <i class="icon-ver-mas-tarde icon-clock2"></i>
+                                </div>
+                            </div>
+                            <div class="agregar-lista">
+                                <p class="agregar-lista-text">agregar a la lista</p>
+                                <div class="icon-agregar-lista-container">
+                                    <i class="icon-agregar-lista icon-playlist_play"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="description-content">
+                            <img src="images/image-profile.png" alt="" class="image-profile">
+                            <h1 class="tittle-content">Título de canción</h1>
+                            <h2 class="name-account-content">Autor</h2>
+                            <h2 class="views-content">20 M de vistas</h2>
+                            <h2 class="time-content">hace 11 meses</h2>
+                            <i class="more-options-content icon-more-vertical"></i>
+                        </div>
+                    </div>
                 </div>
                 <div class="mix-content">
                     <div class="container-content">
