Extensión de archivos de imagen

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <i class="icon-menu-righ icon-video_call"></i>
                         <i class="icon-menu-righ icon-stack"></i>
                         <i class="icon-menu-righ icon-bell"></i>
-                        <img src="images/image-profile.PNG" alt="" class="icon-menu-righ image-profile">
+                        <img src="images/image-profile.png" alt="" class="icon-menu-righ image-profile">
                     </nav>
                 </div>
             </nav>
