--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                             </div>
                         </div>
                         <div class="description-content">
-                            <img src="images/image-profile.png" alt="" class="image-profile">
+                            <img src="images/image-profile.p" alt="" class="image-profile">
                             <h1 class="tittle-content">Título de canción</h1>
                             <h2 class="name-account-content">Autor</h2>
                             <h2 class="views-content">20 M de vistas</h2>
