Se organizó el buscador, otros media queries. Se organizó la interactividad con los menus y queda faltando el menu-more-nootification, además de organizar los estilos del buscador

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
                     <img src="images/YouTube_Premium_logo.png" alt="">
                     <span>CO</span>
                 </div>
-                <div class="search-bar">
+                <div class="search-bar hidden">
+                    <svg class="iconBack" viewBox="0 0 20 20">
+                        <path d="M6.18 7L10 10.82 13.82 7 15 8.17l-5 5-5-5z"></path>
+                    </svg>
                     <input type="text" placeholder="Buscar" class="box-search"/>
                     <div class="search-button">
                         <i class="button-search icon-search"></i>
