se estructura interacción con menus-more-notificación pero hayun bug que recarga el archivo js

--- a/index.html
+++ b/index.html
@@ -238,6 +238,15 @@
                     </div>
                     <img src="images/image-content.png" alt="" class="image-content">
                     <i class="more-options-notification icon-more-vertical"></i>
+                    <div class="menu-more-options-notification">
+                        <div class="ocultar">
+                            <i class="iconOcultar icon-stack"></i>
+                            <p class="ocultarN">Ocultar esta notificación</p>
+                        </div>
+                        <div class="ocultar">
+                            <p class="ocultarNA">No notificar nada del artista</p>
+                        </div>
+                    </div>
                 </a>
                 <a href="" class="notification">
                     <img src="images/image-profile.png" alt="" class="image-profile">
@@ -247,6 +256,15 @@
                     </div>
                     <img src="images/image-content.png" alt="" class="image-content">
                     <i class="more-options-notification icon-more-vertical"></i>
+                    <div class="menu-more-options-notification">
+                        <div class="ocultar">
+                            <i class="iconOcultar icon-stack"></i>
+                            <p class="ocultarN">Ocultar esta notificación</p>
+                        </div>
+                        <div class="ocultar">
+                            <p class="ocultarNA">No notificar nada del artista</p>
+                        </div>
+                    </div>
                 </a>
                 <a href="" class="notification">
                     <img src="images/image-profile.png" alt="" class="image-profile">
@@ -256,6 +274,15 @@
                     </div>
                     <img src="images/image-content.png" alt="" class="image-content">
                     <i class="more-options-notification icon-more-vertical"></i>
+                    <div class="menu-more-options-notification">
+                        <div class="ocultar">
+                            <i class="iconOcultar icon-stack"></i>
+                            <p class="ocultarN">Ocultar esta notificación</p>
+                        </div>
+                        <div class="ocultar">
+                            <p class="ocultarNA">No notificar nada del artista</p>
+                        </div>
+                    </div>
                 </a>
                 <a href="" class="notification">
                     <img src="images/image-profile.png" alt="" class="image-profile">
@@ -265,6 +292,15 @@
                     </div>
                     <img src="images/image-content.png" alt="" class="image-content">
                     <i class="more-options-notification icon-more-vertical"></i>
+                    <div class="menu-more-options-notification">
+                        <div class="ocultar">
+                            <i class="iconOcultar icon-stack"></i>
+                            <p class="ocultarN">Ocultar esta notificación</p>
+                        </div>
+                        <div class="ocultar">
+                            <p class="ocultarNA">No notificar nada del artista</p>
+                        </div>
+                    </div>
                 </a>
                 <a href="" class="notification">
                     <img src="images/image-profile.png" alt="" class="image-profile">
@@ -274,6 +310,15 @@
                     </div>
                     <img src="images/image-content.png" alt="" class="image-content">
                     <i class="more-options-notification icon-more-vertical"></i>
+                    <div class="menu-more-options-notification">
+                        <div class="ocultar">
+                            <i class="iconOcultar icon-stack"></i>
+                            <p class="ocultarN">Ocultar esta notificación</p>
+                        </div>
+                        <div class="ocultar">
+                            <p class="ocultarNA">No notificar nada del artista</p>
+                        </div>
+                    </div>
                 </a>
                 <a href="" class="notification">
                     <img src="images/image-profile.png" alt="" class="image-profile">
@@ -283,6 +328,15 @@
                     </div>
                     <img src="images/image-content.png" alt="" class="image-content">
                     <i class="more-options-notification icon-more-vertical"></i>
+                    <div class="menu-more-options-notification">
+                        <div class="ocultar">
+                            <i class="iconOcultar icon-stack"></i>
+                            <p class="ocultarN">Ocultar esta notificación</p>
+                        </div>
+                        <div class="ocultar">
+                            <p class="ocultarNA">No notificar nada del artista</p>
+                        </div>
+                    </div>
                 </a>
                 <a href="" class="notification">
                     <img src="images/image-profile.png" alt="" class="image-profile">
@@ -292,6 +346,15 @@
                     </div>
                     <img src="images/image-content.png" alt="" class="image-content">
                     <i class="more-options-notification icon-more-vertical"></i>
+                    <div class="menu-more-options-notification">
+                        <div class="ocultar">
+                            <i class="iconOcultar icon-stack"></i>
+                            <p class="ocultarN">Ocultar esta notificación</p>
+                        </div>
+                        <div class="ocultar">
+                            <p class="ocultarNA">No notificar nada del artista</p>
+                        </div>
+                    </div>
                 </a>
                 <a href="" class="notification">
                     <img src="images/image-profile.png" alt="" class="image-profile">
@@ -301,6 +364,15 @@
                     </div>
                     <img src="images/image-content.png" alt="" class="image-content">
                     <i class="more-options-notification icon-more-vertical"></i>
+                    <div class="menu-more-options-notification">
+                        <div class="ocultar">
+                            <i class="iconOcultar icon-stack"></i>
+                            <p class="ocultarN">Ocultar esta notificación</p>
+                        </div>
+                        <div class="ocultar">
+                            <p class="ocultarNA">No notificar nada del artista</p>
+                        </div>
+                    </div>
                 </a>
                 <a href="" class="notification">
                     <img src="images/image-profile.png" alt="" class="image-profile">
@@ -310,15 +382,19 @@
                     </div>
                     <img src="images/image-content.png" alt="" class="image-content">
                     <i class="more-options-notification icon-more-vertical"></i>
+                    <div class="menu-more-options-notification">
+                        <div class="ocultar">
+                            <i class="iconOcultar icon-stack"></i>
+                            <p class="ocultarN">Ocultar esta notificación</p>
+                        </div>
+                        <div class="ocultar">
+                            <p class="ocultarNA">No notificar nada del artista</p>
+                        </div>
+                    </div>
                 </a>
             </div>
         </div>
-        <!-- <div class="menu-more-options-notification">
-            <i class="ocultar icon-stack"></i>
-            <p>Ocultar esta notificación</p>
-            <p>Desactivar todas las notificaciones del artista</p>
-            <p>Desactivar todas las notificaciones de recomendaciones</p>
-        </div> -->
+        
         <div class="menu-profile hidden">
             <div class="account">
                 <img src="images/image-profile.PNG" alt="" class="image-profile">
